# robotframework-find-unused

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  tasks.py
.github/workflows/: ci.yaml
atest/keywords/: test.py
atest/keywords/robot/: keywords.resource  test.robot
docs/gif/arguments/: arguments.tape
docs/gif/files/: files.tape
docs/gif/keywords/: keywords.tape
docs/gif/returns/: returns.tape
docs/gif/variables/: variables.tape
robotframework_find_unused/: __init__.py  arguments.py  cli.py  keywords.py  variables.py
robotframework_find_unused/common/: const.py  gather_keywords.py  robocop_visit.py
robotframework_find_unused/visitors/: keyword.py  library_import.py  variable.py
src/robotframework_find_unused/: __init__.py  __main__.py  arguments.py  cli.py  keywords.py  returns.py  variables.py
src/robotframework_find_unused/commands/: __init__.py  arguments.py  files.py  keywords.py  returns.py  variables.py
src/robotframework_find_unused/common/: __init__.py  cli.py  const.py  convert.py  enrich_python_keywords.py  gather_files.py  gather_keywords.py  gather_variables.py  impossible_state_error.py  normalize.py  parse.py  path.py  pythonpath.py  resolve_import_string.py  resolve_variables.py  robocop_visit.py  sort.py  visit.py
src/robotframework_find_unused/convert/: __init__.py  convert_keyword.py  convert_path.py
src/robotframework_find_unused/parse/: __init__.py  libdoc.py  parse_robot_file.py  parse_variable.py
src/robotframework_find_unused/reporter/: __init__.py
src/robotframework_find_unused/resolve/: __init__.py  (+3 more)
test/: __init__.py
test/atest/: utils.py
(+175 files in other folders)
